--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url(./hacker-2883632_128....jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 800px;
+}
 h1{
   text-align: center;
   font-size: 50px;
