--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(./hacker-2883632_128....jpg);
+  background-image: url(./hacker.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 800px;
