--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-  background-image: url(./hacker.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 800px;
-  color : white;
+  	background-image: url(./hacker.jpg);
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	height: 800px;
+  	color : white;
+	text-align: center;
 }
 h1{
 	background-color : Black; 
@@ -11,6 +12,7 @@ h1{
 	font-family: arial;
 	text-align: center;
 	font-size: 50px;
+	font-weight: bold;
 	border: 2px solid black;
 	width : 400 px;
 	border-radius: 100px;
@@ -34,13 +36,13 @@ a:hover {
 }
 #repDec {
 	color : red;
-	font-style :bold;
+	font-weight: bold;
 }
 #repBin {
 	color : red;
-	font-style :bold;
+	font-weight: bold;
 }
 #repHex {
 	color : red;
-	font-style :bold;
+	font-weight: bold;
 }
